--- a/hr-eureka-server/pom.xml
+++ b/hr-eureka-server/pom.xml
@@ -51,6 +51,11 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+            <!-- https://mvnrepository.com/artifact/org.glassfish.jaxb/jaxb-runtime -->
+            <dependency>
+                <groupId>org.glassfish.jaxb</groupId>
+                <artifactId>jaxb-runtime</artifactId>
+            </dependency>
 		</dependencies>
 	</dependencyManagement>
 
