--- a/hr-payroll/src/main/resources/application.yml
+++ b/hr-payroll/src/main/resources/application.yml
@@ -4,15 +4,11 @@ server:
 spring:
   application:
     name: hr-payroll
-  cloud:
-    loadbalancer:
-      clients:
-        hr-worker:
-          instances:
-            - host: localhost
-              port: 8001
-            - host: localhost
-              port: 8002
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
 
 logging:
   level:
