--- a/hr-worker/src/main/resources/application.properties
+++ b/hr-worker/src/main/resources/application.properties
@@ -1,13 +1,10 @@
-spring.application.name=hr-worker
 server.port=8001
-# Database configuration
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
+spring.application.name=hr-worker
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# Adie a inicialização do data.sql para depois da criação das tabelas pelo JPA
 spring.jpa.defer-datasource-initialization=true
 
-management.endpoints.web.exposure.include=health
-
+# Configuração Eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=true
