Random port to hr-worker

--- a/hr-worker/src/main/resources/application.properties
+++ b/hr-worker/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-server.port=8001
 spring.application.name=hr-worker
+server.port=${PORT:0}
+
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
 
 # Adie a inicialização do data.sql para depois da criação das tabelas pelo JPA
 spring.jpa.defer-datasource-initialization=true
