Resilience4j  fault tolerance

--- a/hr-payroll/pom.xml
+++ b/hr-payroll/pom.xml
@@ -51,6 +51,12 @@
             <!-- Não precisa colocar <version> se estiver usando o BOM -->
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <dependencyManagement>
