--- a/hr-api-gateway-zuul/src/main/resources/application.properties
+++ b/hr-api-gateway-zuul/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=hr-api-gateway-zuul
+server.port=8765
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.prefer-ip-address=true
+
+spring.cloud.gateway.routes[0].id=hr-worker
+spring.cloud.gateway.routes[0].uri=lb://hr-worker
+spring.cloud.gateway.routes[0].predicates[0]=Path=/hr-worker/**
+spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
+
+spring.cloud.gateway.routes[1].id=hr-payroll
+spring.cloud.gateway.routes[1].uri=lb://hr-payroll
+spring.cloud.gateway.routes[1].predicates[0]=Path=/hr-payroll/**
+spring.cloud.gateway.routes[1].filters[0]=StripPrefix=1
