--- a/hr-payroll/src/main/resources/application.yml
+++ b/hr-payroll/src/main/resources/application.yml
@@ -1,8 +1,6 @@
 server:
   port: ${PORT:0}
 
-
-
 # Habilitando o relatório de autoconfiguração para diagnóstico
 debug: true
 
@@ -30,3 +28,23 @@ logging:
 feign:
   circuitbreaker:
     enabled: true
+  client:
+    config:
+      default:
+        connectTimeout: 10000     # Tempo máximo de conexão (10 segundos)
+        readTimeout: 20000        # Tempo máximo de leitura (20 segundos)
+
+# Configurações Resilience4j (equivalente moderno do Hystrix)
+resilience4j:
+  circuitbreaker:
+    instances:
+      default:
+        register-health-indicator: true
+        sliding-window-size: 10
+        failure-rate-threshold: 50
+        wait-duration-in-open-state: 20s  # Tempo de espera após abrir o circuito
+        permitted-number-of-calls-in-half-open-state: 3
+  timelimiter:
+    instances:
+      default:
+        timeout-duration: 20s  # Tempo máximo de execução antes do fallback
