--- a/hr-worker/src/main/resources/application.properties
+++ b/hr-worker/src/main/resources/application.properties
@@ -11,3 +11,9 @@ spring.jpa.defer-datasource-initialization=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.hostname=localhost
 eureka.instance.prefer-ip-address=true
+
+# Configuração para Spring Cloud Config
+spring.config.import=optional:configserver:
+
+# Ativa o perfil de teste
+spring.profiles.active=test
