Actuator for runtime config refresh

--- a/hr-worker/src/main/resources/application.properties
+++ b/hr-worker/src/main/resources/application.properties
@@ -17,3 +17,5 @@ spring.config.import=optional:configserver:
 
 # Ativa o perfil de teste
 spring.profiles.active=test
+
+management.endpoints.web.exposure.include=*
