--- a/hr-user/src/main/resources/application.properties
+++ b/hr-user/src/main/resources/application.properties
@@ -1,1 +1,23 @@
 spring.application.name=hr-user
+
+server.port=${PORT:0}
+
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+
+# Adie a inicialização do data.sql para depois da criação das tabelas pelo JPA
+spring.jpa.defer-datasource-initialization=true
+
+# Configuração Eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=true
+
+# Configuração para Spring Cloud Config
+spring.config.import=optional:configserver:
+
+# Ativa o perfil de teste
+spring.profiles.active=test
+
+management.endpoints.web.exposure.include=*
+
