User, Role, many to many association

--- a/hr-user/src/main/resources/application.properties
+++ b/hr-user/src/main/resources/application.properties
@@ -21,3 +21,12 @@ spring.profiles.active=test
 
 management.endpoints.web.exposure.include=*
 
+# Database configuration
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+
