--- a/hr-api-gateway-zuul/src/main/resources/application.properties
+++ b/hr-api-gateway-zuul/src/main/resources/application.properties
@@ -19,3 +19,8 @@ spring.cloud.gateway.routes[1].filters[0]=StripPrefix=1
 spring.cloud.gateway.httpclient.connect-timeout=10000
 spring.cloud.gateway.httpclient.response-timeout=20000
 
+# Configuração das rotas do Gateway
+spring.cloud.gateway.routes[2].id=hr-user
+spring.cloud.gateway.routes[2].uri=lb://hr-user
+spring.cloud.gateway.routes[2].predicates[0]=Path=/hr-user/**
+spring.cloud.gateway.routes[2].filters[0]=StripPrefix=1
