--- a/hr-api-gateway-zuul/src/main/resources/application.properties
+++ b/hr-api-gateway-zuul/src/main/resources/application.properties
@@ -24,3 +24,9 @@ spring.cloud.gateway.routes[2].id=hr-user
 spring.cloud.gateway.routes[2].uri=lb://hr-user
 spring.cloud.gateway.routes[2].predicates[0]=Path=/hr-user/**
 spring.cloud.gateway.routes[2].filters[0]=StripPrefix=1
+
+# Configuração das rotas do Gateway
+spring.cloud.gateway.routes[3].id=hr-oauth
+spring.cloud.gateway.routes[3].uri=lb://hr-oauth
+spring.cloud.gateway.routes[3].predicates[0]=Path=/hr-oauth/**
+spring.cloud.gateway.routes[3].filters[0]=StripPrefix=1
