--- a/hr-config-server/src/main/resources/application.properties
+++ b/hr-config-server/src/main/resources/application.properties
@@ -4,4 +4,4 @@ server.port=8888
 
 spring.cloud.config.server.git.uri=https://github.com/marcosfshirafuchi/ms-course-configs-test
 spring.cloud.config.server.git.username=${GITHUB_USER}
-spring.cloud.config.server.git.password=${GITHUB_PASS}
+spring.cloud.config.server.git.password=${u}
