--- a/hr-api-gateway-zuul/src/main/resources/application.properties
+++ b/hr-api-gateway-zuul/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=hr-api-gateway-zuul
 server.port=8765
 
-# Configuração Eureka
+# Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.prefer-ip-address=true
 
-# Configuração das rotas do Gateway
+# ---- Rotas ----
 spring.cloud.gateway.routes[0].id=hr-worker
 spring.cloud.gateway.routes[0].uri=lb://hr-worker
 spring.cloud.gateway.routes[0].predicates[0]=Path=/hr-worker/**
@@ -16,17 +16,22 @@ spring.cloud.gateway.routes[1].uri=lb://hr-payroll
 spring.cloud.gateway.routes[1].predicates[0]=Path=/hr-payroll/**
 spring.cloud.gateway.routes[1].filters[0]=StripPrefix=1
 
-spring.cloud.gateway.httpclient.connect-timeout=10000
-spring.cloud.gateway.httpclient.response-timeout=20000
-
-# Configuração das rotas do Gateway
 spring.cloud.gateway.routes[2].id=hr-user
 spring.cloud.gateway.routes[2].uri=lb://hr-user
 spring.cloud.gateway.routes[2].predicates[0]=Path=/hr-user/**
 spring.cloud.gateway.routes[2].filters[0]=StripPrefix=1
 
-# Configuração das rotas do Gateway
+# hr-oauth (mantendo /hr-oauth/** -> StripPrefix=1 -> /oauth/**)
 spring.cloud.gateway.routes[3].id=hr-oauth
 spring.cloud.gateway.routes[3].uri=lb://hr-oauth
 spring.cloud.gateway.routes[3].predicates[0]=Path=/hr-oauth/**
 spring.cloud.gateway.routes[3].filters[0]=StripPrefix=1
+# Remova cabeçalhos problemáticos (equivalente moderno ao antigo "sensitive-headers")
+spring.cloud.gateway.routes[3].filters[1]=RemoveRequestHeader=Cookie
+spring.cloud.gateway.routes[3].filters[2]=RemoveResponseHeader=Set-Cookie
+# (Opcional) garantir que a resposta seja JSON quando possível
+spring.cloud.gateway.routes[3].filters[3]=AddRequestHeader=Accept, application/json
+
+# Timeouts HTTP
+spring.cloud.gateway.httpclient.connect-timeout=10000
+spring.cloud.gateway.httpclient.response-timeout=20000
