--- a/hr-oauth/src/main/resources/application.properties
+++ b/hr-oauth/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=hr-oauth
-server.port=${PORT:0}
+server.port=9000
 
-eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
-
-
-# Adie a inicialização do data.sql para depois da criação das tabelas pelo JPA
-spring.jpa.defer-datasource-initialization=true
-
-# Configuração Eureka
+# Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-eureka.instance.hostname=localhost
 eureka.instance.prefer-ip-address=true
+
+# H2 Console (opcional)
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Log
+logging.level.org.springframework=INFO
