Security configs to config server

--- a/hr-api-gateway-zuul/src/main/resources/application.properties
+++ b/hr-api-gateway-zuul/src/main/resources/application.properties
@@ -1,40 +1,3 @@
-#spring.application.name=hr-api-gateway-zuul
-#server.port=8765
-#
-## Eureka
-#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-#eureka.instance.prefer-ip-address=true
-#
-## ---- Rotas ----
-#spring.cloud.gateway.routes[0].id=hr-worker
-#spring.cloud.gateway.routes[0].uri=lb://hr-worker
-#spring.cloud.gateway.routes[0].predicates[0]=Path=/hr-worker/**
-#spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
-#
-#spring.cloud.gateway.routes[1].id=hr-payroll
-#spring.cloud.gateway.routes[1].uri=lb://hr-payroll
-#spring.cloud.gateway.routes[1].predicates[0]=Path=/hr-payroll/**
-#spring.cloud.gateway.routes[1].filters[0]=StripPrefix=1
-#
-#spring.cloud.gateway.routes[2].id=hr-user
-#spring.cloud.gateway.routes[2].uri=lb://hr-user
-#spring.cloud.gateway.routes[2].predicates[0]=Path=/hr-user/**
-#spring.cloud.gateway.routes[2].filters[0]=StripPrefix=1
-#
-## hr-oauth (mantendo /hr-oauth/** -> StripPrefix=1 -> /oauth/**)
-#spring.cloud.gateway.routes[3].id=hr-oauth
-#spring.cloud.gateway.routes[3].uri=lb://hr-oauth
-#spring.cloud.gateway.routes[3].predicates[0]=Path=/hr-oauth/**
-#spring.cloud.gateway.routes[3].filters[0]=StripPrefix=1
-## Remova cabeçalhos problemáticos (equivalente moderno ao antigo "sensitive-headers")
-#spring.cloud.gateway.routes[3].filters[1]=RemoveRequestHeader=Cookie
-#spring.cloud.gateway.routes[3].filters[2]=RemoveResponseHeader=Set-Cookie
-## (Opcional) garantir que a resposta seja JSON quando possível
-#spring.cloud.gateway.routes[3].filters[3]=AddRequestHeader=Accept, application/json
-#
-## Timeouts HTTP
-#spring.cloud.gateway.httpclient.connect-timeout=10000
-#spring.cloud.gateway.httpclient.response-timeout=20000
 spring.application.name=hr-api-gateway-zuul
 server.port=8765
 
@@ -80,3 +43,8 @@ spring.cloud.gateway.routes[3].filters[4]=RewritePath=^/oauth/token$, /oauth2/to
 # -------- HTTP timeouts --------
 spring.cloud.gateway.httpclient.connect-timeout=10000
 spring.cloud.gateway.httpclient.response-timeout=20000
+
+# Config Server (modo compatível com Spring Boot 3)
+spring.config.import=optional:configserver:
+# (opcional) URL do config server, se for usar de fato
+spring.cloud.config.uri=http://localhost:8888
