--- a/hr-oauth/src/main/resources/application.properties
+++ b/hr-oauth/src/main/resources/application.properties
@@ -1,13 +1,23 @@
 spring.application.name=hr-oauth
+
 server.port=9000
 
 # Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.prefer-ip-address=true
 
-# H2 Console (opcional)
+# H2 console (se quiser)
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-# Log
+# Logs
 logging.level.org.springframework=INFO
+
+# HABILITAR o Config Server
+spring.config.import=optional:configserver:
+spring.cloud.config.enabled=true
+spring.cloud.config.import-check.enabled=true
+
+jwt.secret=MY_JWT_SECRET_CHANGE_IT
+oauth.client.name=myappname123
+oauth.client.secret=myappsecret123
