--- a/hr-api-gateway-zuul/src/main/resources/application.properties
+++ b/hr-api-gateway-zuul/src/main/resources/application.properties
@@ -48,3 +48,12 @@ spring.cloud.gateway.httpclient.response-timeout=20000
 spring.config.import=optional:configserver:
 # (opcional) URL do config server, se for usar de fato
 spring.cloud.config.uri=http://localhost:8888
+
+
+# Global CORS no Gateway
+spring.cloud.gateway.globalcors.add-to-simple-url-handler-mapping=true
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedOrigins=http://localhost:3000
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedMethods=GET,POST,PUT,DELETE,PATCH,OPTIONS
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedHeaders=Authorization,Content-Type
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].exposedHeaders=Authorization,Location
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowCredentials=true
