--- a/hr-worker/src/main/resources/bootstrap.properties
+++ b/hr-worker/src/main/resources/bootstrap.properties
@@ -1,6 +1,8 @@
 spring.application.name=hr-worker
+
 spring.cloud.config.uri=http://localhost:8888
 
+# Ativa o perfil de teste
 spring.profiles.active=test
 
 management.endpoints.web.exposure.include=*
