--- a/hr-config-server/src/main/resources/application.properties
+++ b/hr-config-server/src/main/resources/application.properties
@@ -1,7 +1,14 @@
 spring.application.name=hr-config-server
-spring.cloud.config.server.git.default-label=main
 server.port=8888
 
 spring.cloud.config.server.git.uri=https://github.com/marcosfshirafuchi/ms-course-configs-test
+spring.cloud.config.server.git.default-label=main
+spring.cloud.config.server.git.clone-on-start=true
+
+# Só se o repositório for privado:
 spring.cloud.config.server.git.username=${GITHUB_USER}
-spring.cloud.config.server.git.password=${u}
+spring.cloud.config.server.git.password=${GITHUB_TOKEN}
+
+# (Opcional) health mostrar status do configServer
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
