--- a/hr-worker/src/main/resources/bootstrap.properties
+++ b/hr-worker/src/main/resources/bootstrap.properties
@@ -3,6 +3,6 @@ spring.application.name=hr-worker
 spring.cloud.config.uri=http://localhost:8888
 
 # Ativa o perfil de teste
-spring.profiles.active=test
+spring.profiles.active=dev
 
 management.endpoints.web.exposure.include=*
