hr-user Postgres dev profile

--- a/hr-user/src/main/resources/application.properties
+++ b/hr-user/src/main/resources/application.properties
@@ -17,7 +17,7 @@ eureka.instance.prefer-ip-address=true
 spring.config.import=optional:configserver:
 
 # Ativa o perfil de teste
-spring.profiles.active=test
+spring.profiles.active=dev
 
 management.endpoints.web.exposure.include=*
 
