--- a/hr-config-server/src/main/resources/application.properties
+++ b/hr-config-server/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.cloud.config.server.git.clone-on-start=true
 
 # Só se o repositório for privado:
 spring.cloud.config.server.git.username=${GITHUB_USER}
-spring.cloud.config.server.git.password=${GITHUB_TOKEN}
+spring.cloud.config.server.git.password=${GITHUB_PASS}
 
 # (Opcional) health mostrar status do configServer
 management.endpoints.web.exposure.include=health,info
