--- a/hr-oauth/src/main/resources/application.properties
+++ b/hr-oauth/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=hr-oauth
 server.port=9000
 
 # Eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://hr-eureka-server:8761/eureka
 eureka.instance.prefer-ip-address=true
 
 # H2 console (se quiser)
