--- a/hr-payroll/src/main/resources/application.yml
+++ b/hr-payroll/src/main/resources/application.yml
@@ -15,7 +15,7 @@ eureka:
     prefer-ip-address: true
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://hr-eureka-server:8761/eureka/
 
 logging:
   level:
