--- a/hr-user/src/main/resources/bootstrap.properties
+++ b/hr-user/src/main/resources/bootstrap.properties
@@ -1,8 +1,9 @@
 spring.application.name=hr-user
 
-spring.cloud.config.uri=http://localhost:8888
+spring.cloud.config.uri=http://hr-config-server:8888
 
-spring.profiles.active=dev
+# Ativa o perfil de teste, dev ou prod
+spring.profiles.active=prod
 
 management.endpoints.web.exposure.include=*
 
