--- a/hr-worker/src/main/resources/application.properties
+++ b/hr-worker/src/main/resources/application.properties
@@ -7,14 +7,14 @@ eureka.instance.instance-id=${spring.application.name}:${spring.application.inst
 spring.jpa.defer-datasource-initialization=true
 
 # Configuração Eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://hr-eureka-server:8761/eureka
 eureka.instance.hostname=localhost
 eureka.instance.prefer-ip-address=true
 
 # Configuração para Spring Cloud Config
 spring.config.import=optional:configserver:
 
-# Ativa o perfil de teste
-spring.profiles.active=dev
+# Ativa o perfil de teste, dev ou prod
+spring.profiles.active=prod
 
 management.endpoints.web.exposure.include=*
