--- a/hr-worker/src/main/resources/bootstrap.properties
+++ b/hr-worker/src/main/resources/bootstrap.properties
@@ -1,8 +1,8 @@
 spring.application.name=hr-worker
 
-spring.cloud.config.uri=http://localhost:8888
+spring.cloud.config.uri=http://hr-config-server:8888
 
-# Ativa o perfil de teste
-spring.profiles.active=dev
+# Ativa o perfil de teste, dev ou prod
+spring.profiles.active=prod
 
 management.endpoints.web.exposure.include=*
