--- a/hr-eureka-server/src/main/resources/application.properties
+++ b/hr-eureka-server/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=hr-eureka-server
 server.port=8761
 
+# é o servidor, não cliente
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+eureka.instance.hostname=localhost
+
+management.endpoints.web.exposure.include=health,info
