--- a/hr-worker/pom.xml
+++ b/hr-worker/pom.xml
@@ -19,6 +19,9 @@
         <java.version>21</java.version>
         <!-- Versão do Spring Cloud compatível com Spring Boot 3.5.x -->
         <spring-cloud.version>2025.0.0</spring-cloud.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.resources.encoding>UTF-8</maven.resources.encoding>
     </properties>
 
     <dependencyManagement>
@@ -89,6 +92,15 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>false</filtering>
+                <includes>
+                    <include>**/*</include>
+                </includes>
+            </resource>
+        </resources>
     </build>
 
 </project>
